# BIOSUtilities

./: .gitignore  .mypy.ini  .pylintrc  AMI_PFAT_Extract.py  AMI_UCP_Extract.py  Apple_EFI_ID.py  Apple_EFI_IM4P.py  Apple_EFI_Identify.py  Apple_EFI_PBZX.py  Apple_EFI_PKG.py  Apple_EFI_Split.py  Award_BIOS_Extract.py  CHANGELOG  Dell_PFS_Extract.py  Fujitsu_SFX_Extract.py  Fujitsu_UPC_Extract.py  Insyde_IFD_Extract.py  Insyde_iFlash_Extract.py  LICENSE  Panasonic_BIOS_Extract.py  Phoenix_TDK_Extract.py  Portwell_EFI_Extract.py  README.md  Toshiba_COM_Extract.py  VAIO_Package_Extract.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
AMI BIOS Guard Extractor/: AMI_PFAT_Extract.py
AMI UCP BIOS Extractor/: AMI_UCP_Extract.py
Apple EFI File Renamer/: Apple_EFI_Rename.py
Apple EFI IM4P Splitter/: Apple_EFI_Split.py
Apple EFI Package Extractor/: Apple_EFI_Package.py
Apple EFI Package Grabber/: Apple_EFI_Grab.py
Apple EFI Sucatalog Link Grabber/: Apple_EFI_Links.py
Award BIOS Module Extractor/: Award_BIOS_Extract.py
Dell HDR Module Extractor/: Dell_HDR_Extract.py
Dell PFS BIOS Extractor/: Dell_PFS_Extract.py
Dell PFS Update Extractor/: Dell_PFS_Extract.py
Fujitsu SFX BIOS Extractor/: Fujitsu_SFX_Extract.py
Fujitsu SFX Packager Extractor/: Fujitsu_Package_Extract.py
Fujitsu UPC BIOS Extractor/: Fujitsu_UPC_Extract.py
Insyde iFlash Image Extractor/: Insyde_iFlash_Extract.py
Panasonic BIOS Update Extractor/: Panasonic_BIOS_Extract.py
Phoenix SCT BIOS Extractor/: Phoenix_SCT_Extract.py
Portwell EFI BIOS Extractor/: Portwell_EFI_Extract.py
VAIO Packaging Manager Extractor/: VAIO_Package_Extract.py
biosutilities/: __init__.py  __main__.py  ami_pfat_extract.py  ami_ucp_extract.py  apple_efi_id.py  apple_efi_im4p.py  apple_efi_pbzx.py  apple_efi_pkg.py  award_bios_extract.py  (+9 more)
(+26 files in other folders)
